[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Information Technology",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Database",                                                                            
	"Topic :: Home Automation",
	"Topic :: System :: Distributed Computing",
]
dependencies = [
	"asyncclick > 7.99",        
	"trio >= 0.22",
	"anyio >= 4",
	"range_set >= 0.2",                                                          
	"attrs >= 22",
	"asyncactor ~= 0.27.0",
	"asyncscope >= 0.10.4",   
	"jsonschema >= 2.5",
	"ruyaml >= 0.89",
	# "argon2 >= 18.3",
	"PyNaCl >= 1.3",
	"moat-lib-diffiehellman ~= 0.13.4",                                           
	"moat-link",
	"psutil",
	"simpleeval >= 0.9.10",                                            
	"moat-mqtt ~= 0.42.4",
	"moat-util ~= 0.56.4",
	"exceptiongroup; python_version<'3.11'",
]
version = "0.71.17"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-kv"
description = "A distributed no-master key-value store"
readme = "README.rst"

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
