[build-system]
build-backend = "setuptools.build_meta"
requires = ["wheel","setuptools"]

[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Framework :: Trio",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = [
    "anyio ~= 4.2",
    "moat-lib-cmd ~= 0.3.5",
]
keywords = ["MoaT"]
requires-python = ">=3.8"
name = "moat-lib-codec"
maintainers = [{email = "matthias@urlichs.de",name = "Matthias Urlichs"}]
description='A simple command/stream multiplexer'
readme = "README.rst"
authors = [{email = "matthias@urlichs.de",name = "Matthias Urlichs"}]
version = "0.4.7"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
