[build-system]
requires = [
    "setuptools >= 64",
]
build-backend = "setuptools.build_meta"

[project]
name = "moat-lib-mqtt"
description = "Sans-io MQTT v5 client/broker with an AnyIO based I/O implementation"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"},
           {name = "Matthias Urlichs", email = "matthias@urlichs.de"},]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Framework :: AnyIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.10"
dependencies = [
    "anyio ~= 4.4",
    "attrs >= 23.2.0",
    "stamina >= 24.2.0",
    "typing-extensions >= 4.0; python_version < '3.11'",
]
version = "0.8.0"

[project.urls]
Documentation = "https://M-o-a-T.org/moat.lib.mqtt"
"Source code" = "https://github.com/m-o-a-t/moat"
"Issue tracker" = "https://github.com/m-o-a-t/moat/issues"

[project.optional-dependencies]
websockets = [
    "httpx-ws >= 0.6.0"
]
test = [
    "moat-lib-mqtt[websockets]",
    "anyio[trio]",
    "coverage >= 7",
    "pytest >= 8.0",
]
doc = [
    "enum_tools[sphinx] >= 0.12.0",
    "moat-lib-mqtt[websockets]",
    "packaging",
    "sphinx-autodoc-typehints >= 2.1.1",
    "sphinx-tabs >= 3.3.1",
]

[tool.ruff.lint]
extend-select = [
    "ASYNC",        # flake8-async
    "B0",           # flake8-bugbear
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "T201",         # print
    "UP",           # pyupgrade
    "W",            # pycodestyle warnings
]
ignore = [
    "B011",         # assert False
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/snippets/**.py" = ["T201", "F841"]

[tool.ruff.lint.isort]
"required-imports" = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = "tests"
filterwarnings = "always"
markers = [
    "network: marks tests as requiring network interfaces",
]

[tool.coverage.run]
source = ["moat.lib.mqtt"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.tox]
env_list = ["pre-commit", "py39", "py310", "py311", "py312", "py313", "pypy3"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
commands = [["pytest", { replace = "posargs", extend = true }]]
depends = ["pre-commit"]
extras = ["test"]
package = "editable"

[tool.tox.env.pre-commit]
commands = [["pre-commit", "run", "--all-files", "--show-diff-on-failure"]]
depends = []
allowlist_externals = ["pre-commit"]
package = "skip"

[tool.tox.env.docs]
commands = [["sphinx-build", "-W", "docs", "build/sphinx"]]
depends = []
extras = ["doc"]
